--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@types/node": "^22.6.1",
+    "@types/react-router-dom": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "styled-components": "^6.1.13",
     "vite-tsconfig-paths": "^5.0.1",
     "zustand": "^5.0.0-rc.2"
