--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/node": "^22.6.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/xml-js": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "styled-components": "^6.1.13",
     "vite-tsconfig-paths": "^5.0.1",
+    "xml-js": "^1.6.11",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
