--- a/.github/workflows/auto-assign.yml
+++ b/.github/workflows/auto-assign.yml
@@ -14,3 +14,7 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.AUTO_ASSIGN_TOKEN }}
           addAssignees: 'author'
+          addReviewers: 'true'
+          numberOfReviewers: 0
+          numberOfAssignees: 0
+          skipDraft: 'true'
