--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/xml-js": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.26.2",
     "styled-components": "^6.1.13",
     "vite-tsconfig-paths": "^5.0.1",
