Feat: route 경로 설정

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
   "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "http://www.kopis.or.kr/openApi/restful/:path*"
-    }
+    { "source": "/api/:path*", "destination": "http://www.kopis.or.kr/openApi/restful/:path*" },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
