--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
+    "vite-plugin-dts": "^4.2.3",
+    "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^5.0.1",
     "xml-js": "^1.6.11",
     "zustand": "^5.0.0-rc.2"
